# graphviz_wrapper

./: .metadata  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/graphviz_wrapper/: GraphvizWrapperPlugin.kt
example/: .metadata  README.md  pubspec.yaml
example/android/app/src/main/kotlin/com/example/graphviz_wrapper_example/: MainActivity.kt
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: graphviz_wrapper.dart
test/: graphviz_wrapper_test.dart
windows/: CMakeLists.txt  graphviz_wrapper_plugin.cpp
windows/include/graphviz_wrapper/: graphviz_wrapper_plugin.h
